CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(GRAPH)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic")

FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(${SOURCE_DIR}/include)

SET(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/matrixGraph.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/listGraph.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/setGraph.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/arcGraph.cpp
)

ADD_EXECUTABLE(tests ${SOURCE_DIR}/src/main.cpp ${SOURCES})
TARGET_LINK_LIBRARIES(tests ${GTEST_LIBRARIES})